--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           <p class="subscribe-title">Subscribe</p>
           <div class="subscribe-wrapper">
             <input
-              tipe="email"
+              type="email"
               class="subscribe-input"
               name="email"
               aria-label="email"
@@ -477,5 +477,7 @@
         </form>
       </div>
     </footer>
+    <!-- <div class="modal-overlay">
+      <div class="modal"> -->
   </body>
 </html>
