--- a/index.html
+++ b/index.html
@@ -477,5 +477,7 @@
         </form>
       </div>
     </footer>
+    <div class="backdrop"></div>
+    <div class="modal"></div>
   </body>
 </html>
