--- a/index.html
+++ b/index.html
@@ -477,8 +477,7 @@
         </form>
       </div>
     </footer>
-
-    <div class="backdrop"></div>
+    <div class="backdrop is-open"></div>
     <div class="modal"></div>
   </body>
 </html>
