--- a/index.html
+++ b/index.html
@@ -478,6 +478,72 @@
       </div>
     </footer>
     <div class="backdrop is-open"></div>
-    <div class="modal"></div>
+    <div class="modal">
+      <button type="button" class="modal-close" data-modal-close>
+        <svg class="modal-close-icon" width="8px" height="8px">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <form>
+        <p class="modal-titel">Leave your contacts and we will call you back</p>
+        <label class="modal-form-field">
+          <span class="modal-form-input-descr">Name</span>
+          <span class="modal-form-wrapper">
+            <input class="modal-form-input" type="text" name="user_name" />
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </span>
+        </label>
+        <label class="modal-form-field">
+          <span class="modal-form-input-descr">Phone</span>
+          <span class="modal-form-wrapper">
+            <input class="modal-form-input" type="tel" name="user_phone" />
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </span>
+        </label>
+        <label class="modal-form-field">
+          <span class="modal-form-input-descr">Email</span>
+          <span class="modal-form-wrapper">
+            <input
+              class="modal-form-input"
+              type="email"
+              name="user_email"
+              class="modal-form-input"
+            />
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </span>
+        </label>
+        <label class="modal-form-fild-textarea">
+          <span class="modal-form-input-descr">Comment</span>
+          <textarea
+            name="user-message"
+            class="modal-form-message"
+            placeholder="Text input"
+          ></textarea>
+        </label>
+        <div class="modal-form-checkbox">
+          <input
+            class="modal-form-check visually-hidden"
+            type="checkbox"
+            name="user_policy"
+          />
+          <label class="modal-form-check-descr">
+            <span class="modal-form-check-copy">
+              <svg class="modal-form-check-icon" width="16" height="16">
+                <use href=""></use>
+              </svg>
+            </span>
+            "I accept the terms and conditions of the Privacy Policy" ,
+          </label>
+        </div>
+        <!-- <button class="">
+        </button> -->
+      </form>
+    </div>
   </body>
 </html>
