backdrop isopen - hidde

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         </form>
       </div>
     </footer>
-    <div class="backdrop is-open"></div>
+    <div class="backdrop"></div>
     <div class="modal">
       <button type="button" class="modal-close" data-modal-close>
         <svg class="modal-close-icon" width="8px" height="8px">
