--- a/index.html
+++ b/index.html
@@ -507,12 +507,7 @@
         <label class="modal-form-field">
           <span class="modal-form-input-descr">Email</span>
           <span class="modal-form-wrapper">
-            <input
-              class="modal-form-input"
-              type="email"
-              name="user_email"
-              class="modal-form-input"
-            />
+            <input class="modal-form-input" type="email" name="user_email" />
             <svg class="modal-form-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
