--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
             </li>
           </ul>
         </div>
-        <form class="subscribe-form">
+        <!-- <div class="subscribe-wrapper">
           <p class="subscribe-title">Subscribe</p>
-          <div class="subscribe-wrapper">
+          <form class="subscribe-form">
             <input
               type="email"
               class="subscribe-input"
@@ -473,8 +473,8 @@
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
-          </div>
-        </form>
+          </form>
+        </div> -->
       </div>
     </footer>
     <div class="backdrop"></div>
@@ -530,7 +530,7 @@
           <label class="modal-form-check-descr">
             <span class="modal-form-check-copy">
               <svg class="modal-form-check-icon" width="16" height="16">
-                <use href=""></use>
+                <use href="./images/icons.svg"></use>
               </svg>
             </span>
             "I accept the terms and conditions of the Privacy Policy" ,
