--- a/index.html
+++ b/index.html
@@ -485,13 +485,7 @@
           </svg>
         </button>
         <p class="modal-titel">Leave your contacts and we will call you back</p>
-        <!-- <form>
-      <input type="text" class="modal-form-input">
-      <input type="text" class="modal-form-input"> 
-      <input type="text" class="modal-form-input">
-    </form> -->
-
-        <form>
+        <form class="">
           <div>
             <label class="modal-form-field">
               <span class="modal-form-input-descr">Name</span>
@@ -554,7 +548,7 @@
             <label class="modal-form-check-descr">
               <span class="modal-form-check-copy">
                 <svg class="modal-form-check-icon" width="16" height="16">
-                  <use href="./images/icons.svg"></use>
+                  <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg>
               </span>
               "I accept the terms and conditions of the Privacy Policy" ,
