--- a/index.html
+++ b/index.html
@@ -469,7 +469,12 @@
             />
             <button class="button-main subscribe-btn" type="submit">
               Subscribe
-              <svg style="fill: #fff" width="24" height="24">
+              <svg
+                class="btn-subscribe"
+                style="fill: #fff"
+                width="24"
+                height="24"
+              >
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
