add label class subscribe label

--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
         <div class="subscribe-wrapper">
           <p class="subscribe-title">Subscribe</p>
           <form class="subscribe-form">
+            <label class="subscribe-label" for=""></label>
             <input
               class="subscribe-input"
               type="email"
