--- a/index.html
+++ b/index.html
@@ -460,14 +460,15 @@
         <div class="subscribe-wrapper">
           <p class="subscribe-title">Subscribe</p>
           <form class="subscribe-form">
-            <label class="subscribe-label" for=""></label>
-            <input
-              class="subscribe-input"
-              type="email"
-              name="email"
-              aria-label="email"
-              placeholder="E-mail"
-            />
+            <label class="subscribe-label" for="">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="email"
+                aria-label="email"
+                placeholder="E-mail"
+              />
+            </label>
             <button class="button-main subscribe-btn" type="submit">
               Subscribe
               <svg
