--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                   <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg>
               </span>
-              "I accept the terms and conditions of the Privacy Policy" ,
+              "I accept the terms and conditions of the Privacy Policy"
             </label>
           </div>
           <!-- <button class="">
