--- a/index.html
+++ b/index.html
@@ -492,9 +492,9 @@
           </svg>
         </button>
         <p class="modal-titel">Leave your contacts and we will call you back</p>
-        <form class="">
-          <div>
-            <label class="modal-form-field">
+        <form>
+          <div class="modal-form">
+            <label for="user-name" class="modal-form-field">
               <span class="modal-form-input-descr">Name</span>
               <span class="modal-form-wrapper">
                 <input class="modal-form-input" type="text" name="user_name" />
@@ -504,7 +504,7 @@
               </span>
             </label>
           </div>
-          <div>
+          <div class="modal-form">
             <label class="modal-form-field">
               <span class="modal-form-input-descr">Phone</span>
               <span class="modal-form-wrapper">
@@ -521,7 +521,7 @@
               </span>
             </label>
           </div>
-          <div>
+          <div class="modal-form">
             <label class="modal-form-field">
               <span class="modal-form-input-descr">Email</span>
               <span class="modal-form-wrapper">
@@ -536,7 +536,7 @@
               </span>
             </label>
           </div>
-          <div>
+          <div class="modal-form">
             <label class="modal-form-field-textare">
               <span class="modal-form-input-descr">Comment</span>
               <textarea
