--- a/index.html
+++ b/index.html
@@ -495,13 +495,21 @@
         <form>
           <div class="modal-form">
             <label for="user-name" class="modal-form-field">
-              <span class="modal-form-input-descr">Name</span>
-              <span class="modal-form-wrapper">
-                <input class="modal-form-input" type="text" name="user_name" />
+              <div class="modal-form-wrapper">
+                <input
+                  id="user-name"
+                  class="modal-form-input"
+                  type="text"
+                  name="user_name"
+                />
                 <svg class="modal-form-icon" width="18" height="18">
                   <use href="./images/icons.svg#icon-person"></use>
                 </svg>
-              </span>
+              </div>
+              <!-- <span class="modal-form-input-descr">Name</span>
+              <span class="modal-form-wrapper"> -->
+
+              <!-- </span> -->
             </label>
           </div>
           <div class="modal-form">
