--- a/index.html
+++ b/index.html
@@ -494,7 +494,8 @@
         <p class="modal-titel">Leave your contacts and we will call you back</p>
         <form>
           <div class="modal-form">
-            <label for="user-name" class="modal-form-field">
+            <label for="user-name" class="modal-form-field"
+              >Name
               <div class="modal-form-wrapper">
                 <input
                   id="user-name"
