--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                   type="text"
                   name="user_name"
                 />
-                <svg class="modal-form-icon" width="18" height="18">
+                <svg class="modal-form-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-person"></use>
                 </svg>
               </div>
@@ -514,9 +514,9 @@
             </label>
           </div>
           <div class="modal-form">
-            <label class="modal-form-field">
-              <span class="modal-form-input-descr">Phone</span>
-              <span class="modal-form-wrapper">
+            <label class="modal-form-field">Phone
+              <!-- <span class="modal-form-input-descr"</span>
+              <span class="modal-form-wrapper"> -->
                 <input
                   class="modal-form-input"
                   type="tel"
@@ -524,16 +524,16 @@
                   required
                   maxlength="10"
                 />
-                <svg class="modal-form-icon" width="18" height="18">
+                <svg class="modal-form-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </span>
             </label>
           </div>
           <div class="modal-form">
-            <label class="modal-form-field">
-              <span class="modal-form-input-descr">Email</span>
-              <span class="modal-form-wrapper">
+            <label class="modal-form-field">Email
+              <!-- <span class="modal-form-input-descr">Email</span>
+              <span class="modal-form-wrapper"> -->
                 <input
                   class="modal-form-input"
                   type="email"
@@ -545,9 +545,9 @@
               </span>
             </label>
           </div>
-          <div class="modal-form">
+          <div class="modal-form">Comment
             <label class="modal-form-field-textare">
-              <span class="modal-form-input-descr">Comment</span>
+              <!-- <span class="modal-form-input-descr">Comment</span> -->
               <textarea
                 name="user-message"
                 class="modal-form-message"
