--- a/index.html
+++ b/index.html
@@ -514,9 +514,11 @@
             </label>
           </div>
           <div class="modal-form">
-            <label class="modal-form-field">Phone
+            <label class="modal-form-field"
+              >Phone
               <!-- <span class="modal-form-input-descr"</span>
               <span class="modal-form-wrapper"> -->
+              <div class="modal-form-wrapper">
                 <input
                   class="modal-form-input"
                   type="tel"
@@ -527,13 +529,17 @@
                 <svg class="modal-form-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
-              </span>
+              </div>
+
+              <!-- </span> -->
             </label>
           </div>
           <div class="modal-form">
-            <label class="modal-form-field">Email
+            <label class="modal-form-field"
+              >Email
               <!-- <span class="modal-form-input-descr">Email</span>
               <span class="modal-form-wrapper"> -->
+              <div class="modal-form-wrapper">
                 <input
                   class="modal-form-input"
                   type="email"
@@ -542,10 +548,13 @@
                 <svg class="modal-form-icon" width="18" height="18">
                   <use href="./images/icons.svg#icon-email"></use>
                 </svg>
-              </span>
+              </div>
+
+              <!-- </span> -->
             </label>
           </div>
-          <div class="modal-form">Comment
+          <div class="modal-form">
+            Comment
             <label class="modal-form-field-textare">
               <!-- <span class="modal-form-input-descr">Comment</span> -->
               <textarea
