--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                   type="email"
                   name="user_email"
                 />
-                <svg class="modal-form-icon" width="18" height="18">
+                <svg class="modal-form-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-email"></use>
                 </svg>
               </div>
@@ -554,8 +554,8 @@
             </label>
           </div>
           <div class="modal-form">
-            Comment
-            <label class="modal-form-field-textare">
+            <label class="modal-form-field-textare"
+              >Comment
               <!-- <span class="modal-form-input-descr">Comment</span> -->
               <textarea
                 name="user-message"
@@ -575,7 +575,7 @@
                 <svg class="modal-form-check-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg>
-              </span>
+              <!-- </span> -->
               "I accept the terms and conditions of the Privacy Policy"
             </label>
           </div>
