--- a/index.html
+++ b/index.html
@@ -554,12 +554,13 @@
           </div>
           <div class="modal-form-checkbox">
             <input
+              id="user-privacy"
               class="modal-form-check visually-hidden"
               type="checkbox"
               value="true"
               name="user-privacy"
             />
-            <label class="modal-form-check-descr">
+            <label for="user-privacy" class="modal-form-check-descr">
               <span class="modal-form-check-copy">
                 <svg class="modal-form-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Checkbox"></use>
