--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@
               "I accept the terms and conditions of the Privacy Policy"
             </label>
           </div>
+          <button class="button-main btn-modal">Send</button>
         </form>
       </div>
     </div>
