--- a/index.html
+++ b/index.html
@@ -494,63 +494,51 @@
         <p class="modal-titel">Leave your contacts and we will call you back</p>
         <form>
           <div class="modal-form">
-            <label for="user-name" class="modal-form-field"
-              >Name
-              <div class="modal-form-wrapper">
-                <input
-                  id="user-name"
-                  class="modal-form-input"
-                  type="text"
-                  name="user_name"
-                />
-                <svg class="modal-form-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-              </div>
-            </label>
+            <label for="user-name" class="modal-form-field">Name</label>
+            <div class="modal-form-wrapper">
+              <input
+                id="user-name"
+                class="modal-form-input"
+                type="text"
+                name="user_name"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-form">
-            <label class="modal-form-field"
-              >Phone
-              <div class="modal-form-wrapper">
-                <input
-                  class="modal-form-input"
-                  type="tel"
-                  name="user_phone"
-                  required
-                  maxlength="10"
-                />
-                <svg class="modal-form-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="modal-form-field">Phone</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="user_phone"
+                required
+                maxlength="10"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-form">
-            <label class="modal-form-field"
-              >Email
-              <div class="modal-form-wrapper">
-                <input
-                  class="modal-form-input"
-                  type="email"
-                  name="user_email"
-                />
-                <svg class="modal-form-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="modal-form-field">Email</label>
+            <div class="modal-form-wrapper">
+              <input class="modal-form-input" type="email" name="user_email" />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-form">
-            <label for="user-comment" class="modal-form-field"
-              >Comment
-              <textarea
-                id="user-comment"
-                name="user-message"
-                class="modal-form-message"
-                placeholder="Text input"
-              ></textarea>
-            </label>
+            <label for="user-comment" class="modal-form-field">Comment </label>
+            <textarea
+              id="user-comment"
+              name="user-message"
+              class="modal-form-message"
+              placeholder="Text input"
+            ></textarea>
           </div>
           <div class="modal-form-checkbox">
             <input
