--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 id="user-name"
                 class="modal-form-input"
                 type="text"
-                name="user_name"
+                name="user-name"
               />
               <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
@@ -511,9 +511,10 @@
             <label class="modal-form-field">Phone</label>
             <div class="modal-form-wrapper">
               <input
+                id="user-phone"
                 class="modal-form-input"
                 type="tel"
-                name="user_phone"
+                name="user-phone"
                 required
                 maxlength="10"
               />
@@ -525,14 +526,19 @@
           <div class="modal-form">
             <label class="modal-form-field">Email</label>
             <div class="modal-form-wrapper">
-              <input class="modal-form-input" type="email" name="user_email" />
+              <input
+                id="user-email"
+                class="modal-form-input"
+                type="email"
+                name="user-email"
+              />
               <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-form">
-            <label for="user-comment" class="modal-form-field">Comment </label>
+          <div class="modal-form message-comment">
+            <label for="user-comment" class="modal-form-field">Comment</label>
             <textarea
               id="user-comment"
               name="user-message"
