--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
             <label for="user-comment" class="modal-form-field">Comment</label>
             <textarea
               id="user-comment"
-              name="user-message"
+              name="user-comment"
               class="modal-form-message"
               placeholder="Text input"
             ></textarea>
