--- a/index.html
+++ b/index.html
@@ -560,7 +560,8 @@
                   <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg>
               </span>
-              "I accept the terms and conditions of the Privacy Policy"
+              "I accept the terms and conditions of the"
+              <a class="privacy-policy-link" href="#">"Privacy Policy"</a>
             </label>
           </div>
           <button class="button-main btn-modal">Send</button>
