--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@
                   <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg>
               </span>
-              "I accept the terms and conditions of the"
-              <a class="privacy-policy-link" href="#">"Privacy Policy"</a>
+              I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="#">Privacy Policy</a>
             </label>
           </div>
           <button class="button-main btn-modal">Send</button>
