--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@
                 class="modal-form-input"
                 type="text"
                 name="user-name"
+                required
               />
               <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
