--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <div class="subscribe-wrapper">
           <p class="subscribe-title">Subscribe</p>
           <form class="subscribe-form">
-            <label for="/" class="subscribe-label">
+            <label class="subscribe-label">
               <input
                 class="subscribe-input"
                 type="email"
