--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -558,7 +558,7 @@
             <label for="user-privacy" class="modal-form-check-descr">
               <span class="modal-form-check-copy">
                 <svg class="modal-form-check-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                  <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
