--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h1 class="hero-baner-title">
             Effective Solutions for Your Business
           </h1>
-          <button class="button-main btn-baner" type="button">
+          <button class="button-main btn-baner" type="button" data-modal-open>
             Order Service
           </button>
         </div>
@@ -484,7 +484,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -569,5 +569,6 @@
         </form>
       </div>
     </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
